--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,6 @@
 # main links links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-
-  - title: "About"
+  - title: "CV"
     url: http://cv.grimmer.io/
 
   - title: "Sample Posts"
