--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Grimmer's blog"
 title_separator          : "-"
 name                     : "Grimmer"
 description              : "An amazing website."
-url                      : "https://grimmer.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://grimmer.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
