change cv0.grimmer.io to cv.grimmer.io

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: http://cv0.grimmer.io/
+    url: http://cv.grimmer.io/
 
   - title: "Tags"
     url: /tags/
