--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "CV"
-    url: http://cv0.grimmer.io/
+  - title: "GitHub"
+    url: https://github.com/grimmer0125  
 
   - title: "Tags"
     url: /tags/
