--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "Grimmer Kang"
-  avatar           : "bio-photo.jpg"
+  avatar           : "bio.png"
   bio              : "I am a true seeker."
   location         : "Mars"
   email            :
