Add portfolio page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
   - title: "GitHub"
-    url: https://github.com/grimmer0125  
+    url: https://github.com/grimmer0125
 
   - title: "Tags"
     url: /tags/
+
+  - title: "Portfolio"
+    url: /portfolio/
