--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "GitHub"
     url: https://github.com/grimmer0125
 
+  - title: "Portfolio"
+    url: http://slides.com/teng-chiehkang/portfolio/fullscreen
+    
   - title: "Tags"
     url: /tags/
-
-  - title: "Portfolio"
-    url: /portfolio/
