change the url of new blog site.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: http://slides.com/teng-chiehkang/portfolio/fullscreen
 
   - title: "New Blog (Beta)"
-    url: https://flamboyant-ptolemy-511122.netlify.com
+    url: https://grimmer.netlify.com
 
   - title: "Tags"
     url: /tags/
